--- a/customwebportal/webapp/i18n/i18n.properties
+++ b/customwebportal/webapp/i18n/i18n.properties
@@ -9,3 +9,10 @@ appTitle=App Title
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=App Title
+
+
+homeIconTooltip=Home
+logoText=<Logo>
+pageTitle=<Page Title>
+searchPlaceholder=Search...
+userMenuTooltip=User Menu
