Added global announcement panel and footer section

--- a/customwebportal/webapp/i18n/i18n.properties
+++ b/customwebportal/webapp/i18n/i18n.properties
@@ -1,18 +1,14 @@
-# This is the resource bundle for com.inctue.customwebportal
+# Global Announcement
+globalAnnouncementText=🔔 Global Announcement: Welcome to Web Portal!
 
-#Texts for manifest.json
+# Shell Bar
+webPortalTitle=Web Portal
+searchPlaceholder=Search…
+userProfileTooltip=User Profile
 
-#XTIT: Application name
-appTitle=App Title
+# Main Content
+applicationsTitle=Applications
+announcementsTitle=Announcements
 
-#YDES: Application description
-appDescription=An SAP Fiori application.
-#XTIT: Main view title
-title=App Title
-
-
-homeIconTooltip=Home
-logoText=<Logo>
-pageTitle=<Page Title>
-searchPlaceholder=Search...
-userMenuTooltip=User Menu
+# Footer
+footerCopyrightText=© 2025 jnj · All Rights Reserved
