Properly named Id, Class according to naming convention

--- a/customwebportal/webapp/i18n/i18n.properties
+++ b/customwebportal/webapp/i18n/i18n.properties
@@ -6,9 +6,35 @@ webPortalTitle=Web Portal
 searchPlaceholder=Search…
 userProfileTooltip=User Profile
 
+# Banner
+greetingText=Hello, {0}
+
 # Main Content
 applicationsTitle=Applications
+quickLinksTitle=Quick Links
+featuredKnowledgeArticlesTitle=Featured Knowledge Articles
 announcementsTitle=Announcements
+viewAllText=View All
+viewsText=Views
+noAnnouncementsText=No announcements available.
+
+# Help Section
+helpSectionTitle=Find Answers to all your Reporting Questions!
+helpSectionDescription=All Reporting walkthroughs, guides and answers in one convenient location!
+signFiReportingCatalogButtonText=SignFi Reporting Catalog & Toolkit
+
+# Training Section
+trainingSectionTitle=Looking for Training?
+trainingSectionDescription=Access training materials, courses, videos, guides to help you navigate the tools & systems in Vital, as well as enhance your skills in other areas.
+visitTrainingButtonText=Visit Training
+
+# FAQ Section
+faqSectionTitle=Frequently Asked Questions
 
 # Footer
+companyNameText=Johnson&Johnson
+privacyPolicyText=Privacy Policy
+termsOfUseText=Terms of Use
+releaseNotesText=Release Notes
+copyrightText=© 2025 Johnson and Johnson Services, Inc.
 footerCopyrightText=© 2025 jnj · All Rights Reserved
